--- a/home.html
+++ b/home.html
@@ -36,12 +36,12 @@
         <button class="join-button">JOIN</button>
     </div>
     <div class="hobby-card2 photography">
-        <img src="photography" alt="photography">
+        <img src="photogarphy.jpg" alt="photography">
         <h2>PHOTOGRAPHY</h2>
         <button class="join-button">JOIN</button>
     </div>
     <div class="hobby-card3 music">
-        <img src="music" alt="music">
+        <img src="music.jpg" alt="music">
         <h2>MUSIC</h2>
         <button class="join-button">JOIN</button>
     </div>
