--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
         <button class="join-button">JOIN</button>
     </div>
     <div class="hobby-card2 photography">
-        <img src="photogarphy.jpg" alt="photography">
+        <img src="photography.jpg" alt="photography">
         <h2>PHOTOGRAPHY</h2>
         <button class="join-button">JOIN</button>
     </div>
